# fast_api_course

./: .dockerignore  Dockerfile  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 1c38aeb149f3_create_users_table.py  236eb38ec62b_adding_created_at_and_updated_at_in_.py  23ece96c48e9_create_todos_table.py  81d5adc269d3_add_updated_at_with_default.py  e28950f4be4d_create_field_updated_at_in_users_table.py
src/fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
src/fast_zero/routers/: auth.py  todo.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
