[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "jordany",email = "jordanyluiz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
